--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+
+    <meta http-equiv="Content-Security-Policy" content="
+      default-src * 'self' gap:;
+      connect-src * 'self';
+      script-src * 'self' 'unsafe-inline' 'unsafe-eval';
+      img-src 	* 'self' data:;
+      style-src * 'self' 'unsafe-inline' *;
+      media-src *;">
+
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
@@ -24,14 +33,14 @@
     <script src="js/components/events/eventsController.js"></script>
 
 </head>
-<body ng-app="starter">
-
+<body ng-app="volunteasy">
     <ion-pane>
         <ion-header-bar class="bar-stable">
             <h1 class="title">Ionic Blank Starter</h1>
         </ion-header-bar>
-        <ion-content>
-        </ion-content>
+
     </ion-pane>
+    <ion-nav-view>
+    </ion-nav-view>
 </body>
 </html>
