--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/components/events/eventsController.js"></script>
+    <script src="js/shared/services/apiService.js"></script>
 
 </head>
 <body ng-app="volunteasy">
