--- a/www/index.html
+++ b/www/index.html
@@ -15,6 +15,7 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/ionicons.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
@@ -37,12 +38,6 @@
 
 </head>
 <body ng-app="volunteasy">
-    <ion-pane>
-        <ion-header-bar class="bar-stable">
-            <h1 class="title">Ionic Blank Starter</h1>
-        </ion-header-bar>
-
-    </ion-pane>
     <ion-nav-view>
     </ion-nav-view>
 </body>
