map click single event

--- a/www/index.html
+++ b/www/index.html
@@ -21,10 +21,14 @@
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
+
+    <script src="lib/lodash/lodash.js"></script>
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="lib/angular-simple-logger/dist/angular-simple-logger.js"></script>
+    <script src="lib/angular-google-maps/dist/angular-google-maps.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -34,6 +38,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/components/events/eventsController.js"></script>
+    <script src="js/components/event/eventController.js"></script>
     <script src="js/shared/services/apiService.js"></script>
 
 </head>
