prototype implemented, not configured for user

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
     <script src="js/components/events/eventsController.js"></script>
+    <script src="js/components/report/reportController.js"></script>
     <script src="js/components/event/eventController.js"></script>
     <script src="js/shared/services/apiService.js"></script>
 
