added simple login, minor styling issues

--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,10 @@
     <script src="js/components/events/eventsController.js"></script>
     <script src="js/components/report/reportController.js"></script>
     <script src="js/components/event/eventController.js"></script>
+    <script src="js/components/register/registerController.js"></script>
+    <script src="js/components/login/loginController.js"></script>
     <script src="js/shared/services/apiService.js"></script>
+    <script src="js/shared/services/appStateService.js"></script>
 
 </head>
 <body ng-app="volunteasy">
