--- a/www/index.html
+++ b/www/index.html
@@ -18,9 +18,6 @@
     <link href="css/ionicons.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet">
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
 
     <script src="lib/lodash/lodash.js"></script>
     <!-- ionic/angularjs js -->
@@ -42,6 +39,8 @@
     <script src="js/components/event/eventController.js"></script>
     <script src="js/components/register/registerController.js"></script>
     <script src="js/components/login/loginController.js"></script>
+    <script src="js/components/leaderboard/leaderboardController.js"></script>
+    <script src="js/components/badge/badgeController.js"></script>
     <script src="js/shared/services/apiService.js"></script>
     <script src="js/shared/services/appStateService.js"></script>
 
